[package]
name = "proxy_checker"
version = "0.1.0"
authors = ["GarfDev <garfdev.13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10.8", features = ["json", "cookies"] }
futures = { version = "0.3.5" }
colored = { version = "2" }
serde_json = "1.0"
